# my-utils

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  recipe.yaml  requirements.txt
.github/workflows/: main.yaml
conda.recipe/: recipe.yaml
my_utils/: rmsk.py
myutils/: __init__.py  rmsk.py  tetranscripts.py  wrappers.py
notebooks/: active_te_report.ipynb
tests/: generate.py  rmsk.out  rmsk.ucsc.txt  rmsk_astrk.out  test_load_tetranscripts.py  test_read_rmsk.py  test_wrappers.py
tests/data/: coldata.csv  refgene.gtf  res.cntTable  rmsk.gtf  rmsk.out  rmsk.ucsc.txt  rmsk_astrk.out
