[tool.poetry]
name = "myutils"
version = "0.1.1"
description = "My convenience utilities"
authors = ["mikecuoco <mcuoco@ucsd.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "myutils" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pandas = "^2"
numpy = "^2"
pyranges = "^0.1.2"
anndata = "^0.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
target-version = ["py311"]
line_length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 311
line_length = 88

known_typing = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true
